--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <title>Front-end developer | Caelidh Liddell</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="../style.css"
     <script src="https://kit.fontawesome.com/cfccb013a8.js" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </head>
 <body>
-<div class="d-flex bg-warning">
-    <h1>Hello world</h1>
-    <h2>Hi there</h2>
-    <i class="fa-brands fa-instagram"></i>
+<div class="hero">
+<p>Hi, I'm</p>
+<h1>Caelidh Liddell</h1>
+<h2>Front-end developer based in California</h2>
 </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+   
 </body>
 </html>
