Updated content on index page

--- a/index.html
+++ b/index.html
@@ -20,5 +20,27 @@
 <a href="#" class="btn btn-branding">Contact Me</a>
 </div>
    
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            Weather Project
+        </div>
+        <div class="col-6 project-image">
+            <img src="../images/weather.jpg" alt="weather image" />
+        </div>
+        <div class="col-6 project-image">
+            <img src="../images/bread.jpg" alt="sourdough bread" />
+        </div>
+        <div class="col-6">
+            Sourdough Project
+        </div>
+        <div class="col-6">
+            Yoga App
+        </div>
+        <div class="col-6 project-image">
+            <img src="../images/yoga.jpg" alt="yoga" />
+        </div>
+    </div>
+</div>
 </body>
 </html>
