--- a/index.html
+++ b/index.html
@@ -23,21 +23,28 @@
 <div class="container">
     <div class="row">
         <div class="col-6">
-            Weather Project
+            <p>Weather Project</p>
+            <p>An API based weather search function designed and coded by me.</p>
+         <a href="https://playful-eclair-b0a0d1.netlify.app/" class="btn btn-branding">Launch project</a>   
         </div>
-        <div class="col-6 project-image">
+        <div class="col-6">
             <img src="../images/weather.jpg" alt="weather image" />
         </div>
-        <div class="col-6 project-image">
-            <img src="../images/bread.jpg" alt="sourdough bread" />
+        <div class="col-6">
+            <img src="../images/bread.jpg" alt="sourdough bread" /> 
         </div>
         <div class="col-6">
-            Sourdough Project
+            <p>Sourdough Project</p>
+            <p>My first coding project ever! A basic webpage about sourdough bread</p>
+        <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/778/752/original/sourdough.html?1648603439" class="btn btn-branding">View webpage</a>
+    </div>
+        <div class="col-6">
+            <p>Yoga App</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <a href="#" class="btn btn-branding">Launch project</a>
         </div>
         <div class="col-6">
-            Yoga App
-        </div>
-        <div class="col-6 project-image">
             <img src="../images/yoga.jpg" alt="yoga" />
         </div>
     </div>
