--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../src/style.css"
+    <link rel="stylesheet" href="../src/style.css">
 </head>
 
 <body>
@@ -24,6 +24,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               <a class="nav-link" href="#">About Me</a>
+              <a class="nav-link" href="../work.html">Work</a>
               <a class="nav-link" href="../index.html#contact">Contact Me</a>
             </div>
           </div>
