--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="../about.html">About Me</a>
+              <a class="nav-link" href="../work.html">Work</a>
               <a class="nav-link" href="../index.html#contact">Contact Me</a>
             </div>
           </div>
@@ -36,35 +37,6 @@
 <h2 class="mb-5">Front-end developer based in California</h2>
 <a href="#" class="btn btn-branding contact">Contact Me</a>
 </div>
-   <h3 class="mt-5 mb-5">Check out some of my featured projects below</h3>
-<div class="container">
-    <div class="row mt-5 description">
-        <div class="col-6">
-            <h4>Weather Project</h4>
-            <p>An API based weather search function designed and coded by me</p>
-         <a href="https://playful-eclair-b0a0d1.netlify.app/" class="btn btn-branding">Launch project</a>   
-        </div>
-        <div class="col-6 mb-5 d-none d-md-block">
-            <img src="../images/weather.jpg" alt="weather image" class="img-fluid" />
-        </div>
-        <div class="col-6 mb-5 d-none d-md-block">
-            <img src="../images/bread.jpg" alt="sourdough bread" class="img-fluid" /> 
-        </div>
-        <div class="col-6 description">
-            <h4>Sourdough Project</h4>
-            <p>My first coding project ever! A basic webpage about sourdough bread</p>
-        <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/778/752/original/sourdough.html?1648603439" class="btn btn-branding">View webpage</a>
-    </div>
-        <div class="col-6 description">
-            <h4>Yoga App</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <a href="#" class="btn btn-branding">Launch project</a>
-        </div>
-        <div class="col-6 d-none d-md-block">
-            <img src="../images/yoga.jpg" alt="yoga" class="img-fluid" />
-        </div>
-    </div>
-</div>
+
 </body>
 </html>
