--- a/work.html
+++ b/work.html
@@ -4,8 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Work | Caelidh Liddell</title>
+
+    <script src="https://kit.fontawesome.com/cfccb013a8.js" crossorigin="anonymous"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../src/style.css">
 </head>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Caelidh Liddell</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          <a class="nav-link" href="../about.html">About Me</a>
+          <a class="nav-link" href="../work.html">Work</a>
+          <a class="nav-link" href="../index.html#contact">Contact Me</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <div class="hero">
+  <h3 class="mt-5 mb-5">Check out some of my featured projects below</h3>
+  </div>
+  <div class="container">
+      <div class="row mt-5 description">
+          <div class="col-6">
+              <h4>Weather Project</h4>
+              <p>An API based weather search function designed and coded by me</p>
+           <a href="https://playful-eclair-b0a0d1.netlify.app/" class="btn btn-branding">Launch project</a>   
+          </div>
+          <div class="col-6 mb-5 d-none d-md-block">
+              <img src="../images/weather.jpg" alt="weather image" class="img-fluid" />
+          </div>
+          <div class="col-6 mb-5 d-none d-md-block">
+              <img src="../images/bread.jpg" alt="sourdough bread" class="img-fluid" /> 
+          </div>
+          <div class="col-6 description">
+              <h4>Sourdough Project</h4>
+              <p>My first coding project ever! A basic webpage about sourdough bread</p>
+          <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/778/752/original/sourdough.html?1648603439" class="btn btn-branding">View webpage</a>
+      </div>
+          <div class="col-6 description">
+              <h4>Yoga App</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+              <a href="#" class="btn btn-branding">Launch project</a>
+          </div>
+          <div class="col-6 d-none d-md-block">
+              <img src="../images/yoga.jpg" alt="yoga" class="img-fluid" />
+          </div>
+      </div>
+  </div>
 <body>
     
 </body>
