--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
     </div>
   </nav>
   <div class="hero">
-  <h3 class="mt-5 mb-5">Check out some of my featured projects below</h3>
+  <h1 class="mt-5 mb-5">Featured projects</h1>
   </div>
   <div class="container">
       <div class="row mt-5 description">
