--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Me | Caelidh Liddell</title>
+
+    <script src="https://kit.fontawesome.com/cfccb013a8.js" crossorigin="anonymous"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../src/style.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Caelidh Liddell</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="../about.html">About Me</a>
+              <a class="nav-link" href="../work.html">Work</a>
+              <a class="nav-link" href="../contact.html">Contact Me</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <div class="hero">
+    <h1 class="mt-5 contact-page-h1">Interested in working together?</h1>
+    </div>
+    <div class="mt-5">
+    <h3><i class="fa-regular fa-envelope fa-1x"></i>
+    <a href="mailto:myemail@gmail.com">Email</a></h3>
     
+    <h3><i class="fa-brands fa-linkedin fa-1x"></i>
+    <a href="https://www.linkedin.com/">LinkedIn</a> </h3>
+</div>
 </body>
 </html>
