--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
           <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
           <a class="nav-link" href="../about.html">About Me</a>
           <a class="nav-link" href="../work.html">Work</a>
-          <a class="nav-link" href="../index.html#contact">Contact Me</a>
+          <a class="nav-link" href="../contact.html">Contact Me</a>
         </div>
       </div>
     </div>
