added icons to navbar

--- a/about.html
+++ b/about.html
@@ -16,7 +16,10 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Caelidh Liddell</a>
+          <a class="navbar-brand" href="#">
+            <span class="d-none d-md-block">Caelidh Liddell</span>
+            <span class="d-block d-md-none"><i class="fa-solid fa-c"></i><i class="fa-solid fa-l"></i></span>
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
