--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,16 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Caelidh Liddell</a>
+          <a class="navbar-brand" href="#">
+            <span class="d-none d-md-block">Caelidh Liddell</span>
+            <span class="d-block d-md-none"><i class="fa-solid fa-c"></i><i class="fa-solid fa-l"></i></span>
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
               <a class="nav-link" href="../about.html">About Me</a>
               <a class="nav-link" href="../work.html">Work</a>
               <a class="nav-link" href="../contact.html">Contact Me</a>
@@ -38,7 +41,7 @@
     <a href="mailto:myemail@gmail.com">Email</a></h3>
     
     <h3><i class="fa-brands fa-linkedin fa-1x"></i>
-    <a href="https://www.linkedin.com/">LinkedIn</a> </h3>
+    <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a> </h3>
 </div>
 </body>
 </html>
