added fake email & social media icons

--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
         </div>
       </nav>
 
-
-
     <div class="hero">
 <p>Hi, I'm</p>
 <h1>Caelidh Liddell</h1>
 <h2 class="mb-5">Front-end developer based in California</h2>
 <a href="#" class="btn btn-branding contact">Contact Me</a>
 </div>
-
+<footer>
+    <a href="mailto:me@me.com">me@me.com</a>
+    <i class="fa-brands fa-instagram"></i>
+    <i class="fa-brands fa-github"></i>
+    <i class="fa-brands fa-linkedin"></i>
+</footer>
 </body>
 </html>
