added styling to social links & email

--- a/index.html
+++ b/index.html
@@ -36,13 +36,24 @@
 <p>Hi, I'm</p>
 <h1>Caelidh Liddell</h1>
 <h2 class="mb-5">Front-end developer based in California</h2>
-<a href="#" class="btn btn-branding contact">Contact Me</a>
+
 </div>
 <footer>
-    <a href="mailto:me@me.com">me@me.com</a>
-    <i class="fa-brands fa-instagram"></i>
-    <i class="fa-brands fa-github"></i>
-    <i class="fa-brands fa-linkedin"></i>
+    <div class="email-address d-flex justify-content-center mt-5">
+    <a href="mailto:me@me.com" class="email-address">me@me.com</a>
+    </div>
+    <div class="social-links d-flex justify-content-center">
+        
+    <a href="instagram.com">
+        <i class="fa-brands fa-instagram"></i>
+    </a>
+    <a href="github.com">
+        <i class="fa-brands fa-github"></i>
+    </a>
+    <a href="linkedin.com">
+        <i class="fa-brands fa-linkedin"></i>
+    </a>
+</div>
 </footer>
 </body>
 </html>
