--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-              <a class="nav-link" href="#">About Me</a>
-              <a class="nav-link" href="../work.html">Work</a>
-              <a class="nav-link" href="../index.html#contact">Contact Me</a>
+              <a class="nav-link" aria-current="page" href="../index.html" title="Homepage">Home</a>
+              <a class="nav-link active" href="#" title="About Caelidh">About Me</a>
+              <a class="nav-link" href="../work.html" title="Caelidh's Work">Work</a>
+              <a class="nav-link" href="../index.html#contact" title="Contact Caelidh">Contact Me</a>
             </div>
           </div>
         </div>
