--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-              <a class="nav-link" href="../about.html">About Me</a>
-              <a class="nav-link" href="../work.html">Work</a>
-              <a class="nav-link" href="../contact.html">Contact Me</a>
+              <a class="nav-link" aria-current="page" href="/" title="Homepage">Home</a>
+              <a class="nav-link" href="../about.html" title="About Caelidh">About Me</a>
+              <a class="nav-link" href="../work.html" title="Caelidh's Work">Work</a>
+              <a class="nav-link active" href="../contact.html" title="Contact Caelidh">Contact Me</a>
             </div>
           </div>
         </div>
