--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Caelidh is a front-end developer based in California. She is knowledgeable in HTML, CSS, and Javascript">
     <title>Front-end developer | Caelidh Liddell</title>
  <script src="https://kit.fontawesome.com/cfccb013a8.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
@@ -24,9 +25,9 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="../about.html">About Me</a>
-              <a class="nav-link" href="../work.html">Work</a>
-              <a class="nav-link" href="../contact.html">Contact Me</a>
+              <a class="nav-link" href="../about.html" title="About Caelidh">About Me</a>
+              <a class="nav-link" href="../work.html" title="Caelidh's Work">Work</a>
+              <a class="nav-link" href="../contact.html" title="Contact Caelidh">Contact Me</a>
             </div>
           </div>
         </div>
@@ -44,13 +45,13 @@
     </div>
     <div class="social-links d-flex justify-content-center">
         
-    <a href="instagram.com">
+    <a href="instagram.com" target="_blank">
         <i class="fa-brands fa-instagram"></i>
     </a>
-    <a href="github.com">
+    <a href="github.com" target="_blank">
         <i class="fa-brands fa-github"></i>
     </a>
-    <a href="linkedin.com">
+    <a href="linkedin.com" target="_blank">
         <i class="fa-brands fa-linkedin"></i>
     </a>
 </div>
