--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
     </div>
     <div class="social-links d-flex justify-content-center">
         
-    <a href="instagram.com" target="_blank">
+    <a href="https://www.instagram.com/" target="_blank" title="Instagram profile">
         <i class="fa-brands fa-instagram"></i>
     </a>
-    <a href="github.com" target="_blank">
+    <a href="https://github.com/" target="_blank" title="Github profile">
         <i class="fa-brands fa-github"></i>
     </a>
-    <a href="linkedin.com" target="_blank">
+    <a href="https://www.linkedin.com/" target="_blank" title="LinkedIn profile">
         <i class="fa-brands fa-linkedin"></i>
     </a>
+</div>
+<div class="d-flex justify-content-center">
+    This project was coded by Caelidh Liddell and is open-sourced on Github
 </div>
 </footer>
 </body>
