--- a/about.html
+++ b/about.html
@@ -57,6 +57,8 @@
   
 </div> 
   </div>
-
+  <div class="d-flex justify-content-center mt-5">
+    This project was coded by Caelidh Liddell and is open-sourced on Github
+</div>
 </body>
 </html>
