--- a/contact.html
+++ b/contact.html
@@ -43,5 +43,8 @@
     <h3><i class="fa-brands fa-linkedin fa-1x"></i>
     <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a> </h3>
 </div>
+<div class="d-flex justify-content-center mt-5">
+  This project was coded by Caelidh Liddell and is open-sourced on Github
+</div>
 </body>
 </html>
