--- a/work.html
+++ b/work.html
@@ -64,6 +64,9 @@
           </div>
       </div>
   </div>
+  <div class="d-flex justify-content-center mt-5">
+    This project was coded by Caelidh Liddell and is open-sourced on Github
+</div>
 <body>
     
 </body>
