Edited github link section across pages

--- a/work.html
+++ b/work.html
@@ -64,9 +64,9 @@
           </div>
       </div>
   </div>
-  <div class="d-flex justify-content-center mt-5">
-    This project was coded by Caelidh Liddell and is open-sourced on Github
-</div>
+  <div class="d-flex justify-content-center" >
+    <p class="footer-link">This project was coded by Caelidh Liddell and is <a href="https://github.com/caelidh/portfolio-homework" target="_blank">open-sourced</a>
+</p></div>
 <body>
     
 </body>
