--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <i class="fa-brands fa-linkedin"></i>
     </a>
 </div>
-<div class="d-flex justify-content-center">
-    This project was coded by Caelidh Liddell and is open-sourced on Github
-</div>
+<div class="d-flex justify-content-center" >
+    <p class="footer-link">This project was coded by Caelidh Liddell and is <a href="https://github.com/caelidh/portfolio-homework" target="_blank">open-sourced</a>
+</p></div>
 </footer>
 </body>
 </html>
